2005-03-17  Lars Clausen  <lars@raeder.dk>

	* objects/standard/line.c:
	* lib/geometry.[ch]: 
	* objects/standard/bezier.c: Patch from Grégoire Dooms
	<dooms@info.ucl.ac.be>: Add absolute gap and autogap for line and
	bezier objects.   Autogap nowchanged to be a function of the
	connpoints.

	* lib/libdia.def: 
	* lib/connectionpoint.[ch]: New function to ask if a connpoint has the
	autogap flag.

	* app/connectionpoint_ops.c (connectionpoint_draw): Don't draw
	CP_FLAG_ANYPLACE connpoints.

2005-03-16  Lars Clausen  <lars@LittlePooter.local.>

	* app/interface.c (create_tools): Removed debug printf.

2005-03-15  Lars Clausen  <lars@raeder.dk>

	* lib/widgets.[ch]: Constification.

	* app/interface.c: Work on using gdk-pixbuf-csource'd data, not
	working yet.

	* objects/standard/ellipse.c: Use CP_FLAG_MAIN for central CP.

	* lib/connectionpoint.h: Flags for connection points.

	* app/create_object.c (create_object_motion): 
	* app/modify_tool.c (modify_motion): Minor refactoring.

	* app/object_ops.c (object_find_connectpoint_display): Extend with
	finding connpoints that cover entire objects.

	* app/layer_dialog.c (dia_layer_widget_init): Get rid of warnings.

	* objects/custom/custom_object.c (custom_setup_properties): Avoid
	uninitialized use.

2005-03-13  Hans Breuer  <hans@breuer.org>

	* plug-ins/svg/svg-import.c : handle the <circle/> tag as well

2005-03-13  Hans Breuer  <hans@breuer.org>

	* lib/dia_svg.[hc] objects/custom/shape_info.[hc] plug-ins/svg/svg-import.c :
	s/DiaSvgGraphicStyle/DiaSvgStyle/, added and use convenience functions 
	dia_svg_style_copy(), dia_svg_style_init()

	* objects/custom/shape_info.c : use dia_svg_parse_path() from lib/ (it got
	moved out of this)

	* lib/dia_svg.c(dia_svg_parse_path) : also handle style properties which are
	not wrapped in the style attribute

	* plug-ins/svg/svg-import.c : implement nested group handling and style
	'style inheritance'. Still no transformations, no <image/>, no <style/> 
	<defs/>...
